# libtiff

./: CMakeLists.txt
cmake/: JPEGCodec.cmake  WindowsSupport.cmake
libtiff/: CMakeLists.txt  tif_dir.c  tif_dirinfo.c  tif_dirread.c  tif_getimage.c  tif_ojpeg.c  tif_thunder.c  tiffConfig.cmake.in  tiffiop.h
port/: CMakeLists.txt
test/: CMakeLists.txt  Makefile.am
tools/: CMakeLists.txt  tiff2pdf.c  tiffcp.c  tiffcrop.c
